--- a/public/css/admin/galeri.css
+++ b/public/css/admin/galeri.css
@@ -343,7 +343,7 @@ body {
     margin-bottom: clamp(8px, 1.2vw, 12px);
     line-height: 1.4;
     display: -webkit-box;
-    -webkit-line-clamp: 2;
+    /* -webkit-line-clamp: 2; */
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
